--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Work+Sans:400" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Karla:700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
